Keep testing deps in build_requires

--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,7 @@ use_CompileTests   = 0
 nextrelease_format = %-5v %{ccc MMM d HH:mm:ss V YYYY}d
 github_user        = hinrik
 git_tag_message    = CPAN release %v
+no_AutoPrereq      = 1
 
 [Prereq / Runtime]
 perl            = 5.008
@@ -18,6 +19,6 @@ POE             = 1.289
 POE::Session    = 0
 POE::Wheel::Run = 0
 
-[Prereq / Test]
+[Prereq / BuildRequires]
 Test::More      = 0.47
 Capture::Tiny   = 0.07
