--- a/dist.ini
+++ b/dist.ini
@@ -14,10 +14,11 @@ git_tag_message    = CPAN release %v
 no_AutoPrereq      = 1
 
 [Prereq / Runtime]
-perl            = 5.008
-POE             = 1.289
-POE::Session    = 0
-POE::Wheel::Run = 0
+perl                = 5.008
+POE                 = 1.289
+POE::Filter::Stream = 0
+POE::Session        = 0
+POE::Wheel::Run     = 0
 
 [Prereq / BuildRequires]
 Test::More      = 0.47
