Prereq -> Prereqs to keep Dist::Zilla happy

--- a/dist.ini
+++ b/dist.ini
@@ -13,13 +13,13 @@ github_user        = hinrik
 git_tag_message    = CPAN release %v
 no_AutoPrereq      = 1
 
-[Prereq / Runtime]
+[Prereqs / Runtime]
 perl                = 5.008
 POE                 = 1.291
 POE::Filter::Stream = 0
 POE::Session        = 0
 POE::Wheel::Run     = 0
 
-[Prereq / BuildRequires]
+[Prereqs / BuildRequires]
 Test::More      = 0.47
 Capture::Tiny   = 0.07
